about section overflow scroll fixed

--- a/src/pages/Homepage/about.css
+++ b/src/pages/Homepage/about.css
@@ -58,8 +58,10 @@
 
     .aboutpage-about-container {
         width: 100%;
-        height: 40%;
+        height: 60%;
+        padding: 0 1rem;
         text-align: justify;
+        overflow: hidden;
     }
 
     .aboutpage-title {
@@ -70,7 +72,7 @@
         width: 100%;
         height: 100vh;
         margin-top: 0rem;
-        padding: 1rem 4rem;
+        padding: 1rem;
     }
 
     .aboutpage-headshot-mobile {
@@ -81,6 +83,12 @@
         margin: 0 auto;
         margin-top: 3rem;
         margin-bottom: 0.8rem;
+    }
+
+    .inner-about-container {
+        overflow: scroll;
+        height: 100%;
+        padding: 0 1rem;
     }
 
     .aboutpage-headshot {
